@@ -1,3 +1,4 @@
+7/7/14 #67 clean up how location of game dialog is handled, in preparation for enforcing drag bounds
 7/7/14 rename GameModel.gameState to GameModel.states
 7/7/14 factor out private constants in game model
 7/7/14 rename Molecule.imageConstructor to nodeConstructor, since molecules are scenery Nodes, not images
